fix: Ajuste no z-index do btn voltar em relação ao menu esquerdo

--- a/src/pages/01_tela/style.less
+++ b/src/pages/01_tela/style.less
@@ -514,15 +514,6 @@ section{
     }
   }
 
-  // .feed-neg {
-  //   .text{
-  //     color: #fff;
-
-  //     *{
-  //       color: #fff;
-  //     }
-  //   }
-  // }
 
 }
 
@@ -1385,13 +1376,21 @@ section{
     display:flex;
     justify-content:center;
     align-items: center;
-    width: 100%;
-    padding: 0.5em;
-    background: #93c01f;
-    box-shadow: 0px 0px 6.05px rgba(0, 0, 0, 0.75);
-    border-radius: 1em;
+    gap: 1em;
+    width: 100%; 
+    margin-top: 0.5em;
+
+    span{
+      color: #00365f;
+    }
     
-  
+    img{
+      position: relative;
+      width: 3em;
+      height: 3em;
+      object-fit: contain;
+    }
+
     .text{
       position: relative;
       width: 100%;
